--- a/index6.html
+++ b/index6.html
@@ -43,6 +43,18 @@
       </div>
   </section>
 
+<div class="fixed">
+    <div class="left1">
+        Exciting offers only on <br>
+        Monday
+    </div>
+
+    <div class="right1">
+        Get Discount Upto <br>
+        10%
+    </div>
+</div>
+
 <div class="fcontain">
   <section class="head2"><h2>
     Welcome To My Store
@@ -51,7 +63,8 @@
     <div class="fruits">
       <h2>Fruits</h2>
       <hr>
-      <p> BANANA,MANGO,ORANGE,STRAWBERRY,<br>,COCONUT,DRY PLUMS,APPLE,ORANGE,CHERRY,GRAPES,GUAVA,OLIVE,
+      <p> BANANA,MANGO,ORANGE,STRAWBERRY,<br>,COCONUT,DRY PLUMS,APPLE,ORANGE<br>
+        ,CHERRY,GRAPES,GUAVA,OLIVE,
         ,<br>
         PAPAYA,PINEPPLE,MULBERRY,WATERMELON
       </p>
@@ -59,7 +72,11 @@
     <div class="vegetables">
       <h2>Vegetables</h2>
       <hr>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis illo architecto quibusdam, illum deserunt earum maxime consectetur ut blanditiis accusamus!</p>
+      <p> CARROT, BROCOLI, CAULIFLOWER, CORN, <br />
+        CUCUMBER, EGGPLANT, GREEN PEPPER, <br />
+        ONION, POTATO, PUMPKIN, TOMATO 
+        PEAS, RADDISH, CABBAGE 
+        CHILLI, GREEN BEAN </p>
     </div>
   </section>
   <div class="other1">
@@ -67,25 +84,12 @@
     Other Items
     </h2>
     <HR></HR>
-      <p>CARROT,BROCOLLI,CAULIFLOWER,CORN,CUCUMBER,EGGPLANT</p>
+      <p> MILK, CHEESE, RICE, ORANGE, JUICE, SODA, COFFEE, TEA, FLOUR, SUGAR, SALT, SOUP, <br> BAKING SODA 
+        MUSTARD, TISSUE, CEREAL, BUTTER, JELLY, DISHWASHER, SOAP, BREAD <br>
+        POTATO CHIPS, SPONGES, COOKING OIL, PEEPER, GINGER, BAKERY, FOODS, VANILLA <br>
+        BATTERFRIES, EGGS, JUICE, ICECREAM, KETCHUP, PRUNE, JUICE, NEWSPAPER</p>
       </div>
 </div>
-
-
-
-  <!-- <section class="table1">
-    <div class="thead1">
-      <h2>
-        Welcome To My Store
-      </h2>
-    </div>
-   
-    <div class="itms1"><H2>Fruits</H2>
-      <p>BANANA,MANGO,ORANGE,STRAWBERRY,COCONUT,DRY PLUMS,APPLE,ORANGE,CHERRY,GRAPES,GUAVA,OLIVE,PAPAYA,PINEPPLE,MULBERRY,WATERMELON
-      </p>
-    </div>
-    <div class="itms2"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam eligendi aut unde architecto eius similique iure, libero fuga distinctio est?
-    </div>
-  </section> -->
+ </section>
 </body>
 </html>
